samples/_failures_safe/1761409073_19d916_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_617efd32.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_617efd32.c:194:9: error: expected declaration or statement at end of input
  194 |         case TOKEN_EOF:
      |         ^~~~
./samples/SAFE/__tmp_617efd32.c:194:9: error: expected declaration or statement at end of input
